[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "holmesgpt_playbooks"
version = "0.1.0"
description = "Custom Robusta playbooks for HolmesGPT integration"
authors = ["Pablo Filgueira"]
packages = [{include = "holmesgpt_playbooks"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.31.0"
